--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>za.ac.cput.petparlor</groupId>
-  <artifactId>PetParlor</artifactId>
+  <artifactId>DogParlor</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
